--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,13 @@ jobs:
   build_and_deploy_dev:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
+    
       - name: waiting for approval
         uses: trstringer/manual-approval@v1
         with:
           secret: ${{ github.TOKEN }}
           approvers: technokarthyk, gowtham0045
-          exclude_workflow_initiator: true  
+          exclude_workflow_initiator: false
+
+      - name: Checkout Repository
+        uses: actions/checkout@v2    
