--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,17 @@
-name: testing-on-push
+name: Manual Approval
 
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 
 jobs:
-  build_and_deploy_dev:
+  approval:
     runs-on: ubuntu-latest
-    steps:
-    
-      - name: waiting for approval
-        uses: trstringer/manual-approval@v1
-        with:
-          secret: ${{ github.TOKEN }}
-          approvers: gowtham0045
-          #exclude_workflow_initiator: false
 
-      - name: Checkout Repository
-        uses: actions/checkout@v2    
+    steps:
+    - name: Manual Approval
+      uses: trstringer/manual-approval@v1
+      with:
+        secret: ${{ secrets.GITHUB_TOKEN }}
+        approvers: gowtham0045
+        exclude-workflow-initiator-as-approver: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
