--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,15 @@ jobs:
   approval:
     runs-on: ubuntu-latest
 
+        
     steps:
-      - name: waiting for approval
-        uses: trstringer/manual-approval@v1
+      - uses: trstringer/manual-approval@v1
         with:
           secret: ${{ github.TOKEN }}
           approvers: Gowtham0045
-          exclude_workflow_initiator: true
+          minimum-approvals: 1
+          issue-title: "Deploying v1.3.5 to prod from staging"
+          issue-body: "Please approve or deny the deployment of version v1.3.5."
+          exclude-workflow-initiator-as-approver: false
+          additional-approved-words: ''
+          additional-denied-words: ''
