--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,13 @@ on:
 jobs:
   approval:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
 
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
       - name: Manual Approval
         uses: trstringer/manual-approval@v1
         with:
@@ -21,8 +26,3 @@ jobs:
           exclude-workflow-initiator-as-approver: false
           additional-approved-words: ''
           additional-denied-words: ''
-
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-          
